--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     <div class='main' style='text-align: center;'>
       
       <img src='https://media.discordapp.net/attachments/820712338918866944/905593077132054558/1.png' style='border: 10px solid rgb(43, 3, 47); margin-top: 20px; margin-bottom: 40px; border-radius: 15px;'>
-      <p>0.7 SOL</p>
+      <p>Mint: 0.3 SOL</p>
       <div id="root"></div>
     </div>
     
